--- a/html/header.html
+++ b/html/header.html
@@ -623,7 +623,7 @@
 								</li>
 								<li>
 									<a href="#" class="xiangmu">
-										<i class="iconfont icon-guoju ziti"></i>
+										<i class="iconfont icon-chuju ziti"></i>
 										<span>锅具</span>
 									</a>
 								</li>
@@ -694,7 +694,7 @@
 								</li>
 								<li>
 									<a href="#" class="xiangmu">
-										<i class="iconfont icon-guoju ziti"></i>
+										<i class="iconfont icon-chuju ziti"></i>
 										<span>锅具</span>
 									</a>
 								</li>
@@ -743,8 +743,8 @@
 							</ul>
 						</li>
 					</ul>
-					<div class="nav_bg"></div>   <!--二级菜单的背景-->
 				</div>
+				<div class="nav_bg"></div>   <!--二级菜单的背景-->
 			</div>
 		</div>
 		<div id="besideR">
@@ -777,7 +777,7 @@
 				</a>
 			</div>
 		</div>
-		<div style="width:100%;height:1500px;"></div>
+		<div style="height: 1000px;background: cyan;"></div>
 	</body>
 </html>
 <script src="../js/header.js"></script>
