--- a/html/header.html
+++ b/html/header.html
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="nav">
+			<div id="nav" class="clearfix">
 				<div id="nav_con">
 					<ul class="nav_ul">
 						<li>
@@ -744,7 +744,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="nav_bg"></div>   <!--二级菜单的背景-->
+				<div class="nav_bg" style="z-index: 20;"></div>   <!--二级菜单的背景-->
 			</div>
 		</div>
 		<div id="besideR">
