--- a/html/index.html
+++ b/html/index.html
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="nav" style="z-index: 9;">
+			<div id="nav" style="z-index: 9;" >
 				<div id="nav_con">
 					<ul class="nav_ul">
 						<li>
@@ -825,7 +825,7 @@
 							<span>上新</span>
 						</div>
 						<div class="price">29元起</div>
-						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/01.png" alt="01" style="width: 357px;height: 320px;"/></div>
+						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/01.jpg" alt="01" style="width: 357px;height: 320px;"/></div>
 					</a>
 					<a href="#" class="ppb1">
 						<div class="mask"></div>
@@ -834,7 +834,7 @@
 							<span>上新</span>
 						</div>
 						<div class="price">49元起</div>
-						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/02.png" alt="01" style="width: 357px;height: 320px;"/></div>
+						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/02.jpg" alt="01" style="width: 357px;height: 320px;"/></div>
 					</a>
 					<a href="#" class="ppb3 p3">
 						<div class="mask"></div>
@@ -843,7 +843,7 @@
 							<span>上新</span>
 						</div>
 						<div class="price">25元起</div>
-						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/03.png" alt="01" style="width: 357px;height:155px;"/></div>
+						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/03.jpg" alt="01" style="width: 357px;height:155px;"/></div>
 					</a>
 					<a href="#" class="ppb3">
 						<div class="mask"></div>
@@ -852,13 +852,112 @@
 							<span>上新</span>
 						</div>
 						<div class="price">49元起</div>
-						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/04.png" alt="01" style="width: 357px;height: 155px;"/></div>
+						<div style="width: 100%;height: 100%;" class="ppImg"><img src="../images/04.jpg" alt="01" style="width: 357px;height: 155px;"/></div>
 					</a>
 				</div>
 			</div>
 		</div>
-			
-			
+		<div id="newPro">
+			<div id="newPro_con">
+				<div id="newPro_header">
+					<div class="newPro_header_l pinpai_header_l">
+						<a href="#">
+							<h3 class="name">新品首发</h3>
+						</a>
+						<p class="frontName">周一周四上新，为你寻觅世间好物</p>
+					</div>
+					<a href="#" class="newPro_header_r pinpai_header_r">更多新品></a>
+				</div>
+				<div id="newPro_bottom">
+					<ul class="newPro_list">
+						<div class="newPro_list_box">    <!--整个产品展示区，包括按钮-->
+							<span class="newPro_btnL"><i class="iconfont icon-back"></i></span>   <!--向左的按钮-->
+							<div class="newPro_products">    <!--所有产品-->
+								 <!--每一个产品-->
+								<!--<div class="newPro_pro">        
+									<div class="newPro_hd">
+										<a href="#" title="MA-1棒球领飞行棉服夹克" >     两张图片同时布局，同时请求ajax，鼠标移入控制显示隐藏
+											<div class="newPro_first">
+												<img src="../images/newProduct/1.png" alt="MA-1棒球领飞行棉服夹克" />
+											</div>
+											<div class="newPro_second">
+												<img src="../images/newProduct/01.jpg" alt="MA-1棒球领飞行棉服夹克"/>
+											</div>
+											<div class="colorNum">2色可选</div>    如果ajax中该属性存在,动态创建标签
+										</a>
+									</div>
+									<div class="newPro_bd">
+										<div class="newPro_tags">
+											<span class="newPro_hot">爆品</span> 若商品存在benefit或hot属性，动态创建这两个标签，添加相应类名
+											<span class="newPro_benefit">加价购</span>
+										</div>
+										<h4 class="newPro_name">
+											<a href="#" title="MA-1棒球领飞行棉服夹克">MA-1棒球领飞行棉服夹克</a>
+										</h4>
+										<p class="newPro_price">
+											<span class="newPro_retailPrice">￥499.00</span>
+											<span class="newPro_manufac"><a href="#">Adidas制造商</a></span> 如果存在manufacturer属性就动态创建     
+										</p>
+										<div class="newPro_bd_bg"></div>
+									</div>
+								</div>-->
+							</div>
+							<span class="newPro_btnR" ><i class="iconfont icon-more"></i></span>   <!--向右的按钮-->
+						</div>
+					</ul>
+				</div>
+			</div>
+		</div>	
+		<div id="recommend">
+			<div id="re_con">
+				<div class="re_header">
+					<div class="re_header_l">
+						<a href="javascript:;">
+							<h3 class="name">人气推荐</h3>
+						</a>
+						<div class="re_header_menu">
+							<a href="javascript:;" class="item tab-sel">编辑推荐</a>    <!--当前选中的添加类名tab-sel-->
+							<a href="javascript:;" class="item">热销总榜</a>
+						</div>
+					</div>
+					<a href="javascript:;" class="re_header_r pinpai_header_r">更多推荐></a>
+				</div>
+				<div class="re_bottom">
+					<!--<div class="re_pro popular m-popular">
+						<div class="re_box_top">
+							<a href="javascript:;" alt="玩趣彩虹四季拖鞋">
+								<div style="width: 100%;height: 100%;">
+									<img src="../images/recommend/01.png" alt="玩趣彩虹四季拖鞋" title="玩趣彩虹四季拖鞋"/>
+								</div>
+							</a>
+						</div>
+						<div class="re_box_bottom">
+							<div class="newPro_tags"></div>
+							<h4 class="newPro_name">
+								<a href="#" title="日式水洗棉格纹被">日式水洗棉格纹被</a>
+							</h4>
+							<span class="newPro_retailPrice">￥219.00</span>
+						</div>
+					</div>-->
+					<!--<div class="re_pro popular m-popular down">
+						<div class="re_box_top">
+							<a href="javascript:;" alt="玩趣彩虹四季拖鞋">
+								<div style="width: 100%;height: 100%;">
+									<img src="../images/recommend/01.png" alt="玩趣彩虹四季拖鞋" title="玩趣彩虹四季拖鞋"/>
+								</div>
+							</a>
+						</div>
+						<div class="re_box_bottom">
+							<div class="newPro_tags"></div>
+							<h4 class="newPro_name">
+								<a href="#" title="日式水洗棉格纹被">日式水洗棉格纹被</a>
+							</h4>
+							<span class="newPro_retailPrice">￥219.00</span>
+						</div>
+					</div>-->
+				</div>
+			</div>
+		</div>	
 		<div style="height: 1300px;background: cyan;"></div>
 	</body>
 </html>
