--- a/html/index.html
+++ b/html/index.html
@@ -923,6 +923,7 @@
 					<a href="javascript:;" class="re_header_r pinpai_header_r">更多推荐></a>
 				</div>
 				<div class="re_bottom">
+					<!--每一个盒子-->
 					<!--<div class="re_pro popular m-popular">
 						<div class="re_box_top">
 							<a href="javascript:;" alt="玩趣彩虹四季拖鞋">
@@ -936,9 +937,10 @@
 							<h4 class="newPro_name">
 								<a href="#" title="日式水洗棉格纹被">日式水洗棉格纹被</a>
 							</h4>
-							<span class="newPro_retailPrice">￥219.00</span>
+							<span class="newPro_price">￥219.00</span>
 						</div>
 					</div>-->
+					<!--右下方的每一个小盒子-->
 					<!--<div class="re_pro popular m-popular down">
 						<div class="re_box_top">
 							<a href="javascript:;" alt="玩趣彩虹四季拖鞋">
@@ -958,7 +960,7 @@
 				</div>
 			</div>
 		</div>	
-		<div style="height: 1300px;background: cyan;"></div>
+		<div style="height: 1300px;"></div>
 	</body>
 </html>
 <script src="../jquery-3.1.1.min.js"></script>
