--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
 						<li>
 							<a href="login.html" class="top_con_login">登录</a>
 							<a href="register.html">注册</a>
+							<a href="javascript:;" class="userid"></a>
 						</li>
 						<li>
 							<a href="jujia.html">消息</a>
@@ -1074,7 +1075,7 @@
 											</span>
 										</span>
 									</div>
-									<a href="javascript" class="w-btn tobuyBtn">立即抢购</a>
+									<a href="javascript:;" class="w-btn tobuyBtn">立即抢购</a>
 								</div>
 							</section>
 							<section class="limited_pro limited_pro3">
@@ -1114,7 +1115,7 @@
 											</span>
 										</span>
 									</div>
-									<a href="javascript" class="w-btn tobuyBtn">立即抢购</a>
+									<a href="javascript:;" class="w-btn tobuyBtn">立即抢购</a>
 								</div>
 							</section>
 							<section class="limited_pro limited_pro4">
@@ -1154,7 +1155,7 @@
 											</span>
 										</span>
 									</div>
-									<a href="javascript" class="w-btn tobuyBtn">立即抢购</a>
+									<a href="javascript:;" class="w-btn tobuyBtn">立即抢购</a>
 								</div>
 							</section>
 						</div>
@@ -1525,3 +1526,4 @@
 <script src="../js/header.js"></script>
 <script src="../js/index.js"></script>
 <script src="../js/foot.js"></script>
+<script src="../js/cookie.js"></script>
