--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,136 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>注册</title>
+		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/register.css" />
 	</head>
 	<body>
+		<div class="g-hd">
+			<div class="g-in">
+				<div class="m-logo spritebg">
+					<img src="../images/reg-logo.png" alt="网易邮箱账号" />
+				</div>
+				<div class="m-tr-block">
+					已有账号？去
+					<a href="login.html" id="btn_login">登录</a>
+				</div>
+			</div>
+		</div>	
+		<div id="reg_block">
+			<div class="clearfix m-tab">
+				<div class="left select">普通账号注册</div>
+				<a href="//haoma.163.com/?from=zcb" class="right" id="rightBtn">
+					靓号注册
+					<p class="new">new</p>
+				</a>
+			</div>
+			<div class="m-opr clearfix">
+				<form action="#" id="bind-phone-form" autocomplete="on">   <!--取消自动补全-->
+					<!--账号:网易邮箱/手机号/其他邮箱-->
+					<div class="u-input firstelem">
+						<label for="inpt-account" class="u-label">账号：</label>
+						<input type="text" name="email" id="inpt-account" class="i-inpt" placeholder="网易邮箱/手机号/其他邮箱"/>
+						<div class="auto-1511313967783 m-sug" id="auto-id-1511313967789" style="visibility: hidden;"></div>
+						<input type="text" name="username" style="display: none;"/>
+						<!--一键清除，输入框中有输入时显示-->  
+						<div class="u-tip f-dn">   
+							<div class="spritedg u-clear" id="auto-id-1511313967805"></div>
+						</div>
+						<!--提示   合法    已存在-->
+						<span class="popb"></span>
+					</div>
+					<!--密码-->
+					<div class="u-input">
+						<label for="inpt-pw" class="u-label">密码：</label>
+						<input type="password" name="password" style="display: none;"/>
+						<input type="password" name="pwd" id="inpt-pw" placeholder="6-16位密码，区分大小写" class="i-inpt"/>
+						<!--一键清除，输入框中有输入时显示--> 
+						<div class="u-tip f-dn">
+							<div class="spritedg u-clear" id="auto-id-1511313967805"></div>
+						</div>
+						<!--提示   合法    已存在-->
+						<span class="popb"></span>
+					</div>
+					<!--确认密码-->
+					<div class="u-input">
+						<label for="inpt-pw2" class="u-label">确认密码：</label>
+						<input type="password" name="pwd2" id="inpt-pw2" placeholder="再次输入密码" class="i-inpt arr-clazz"/>
+						<!--一键清除，输入框中有输入时显示--> 
+						<div class="u-tip f-dn">
+							<div class="spritedg u-clear" id="auto-id-1511313967805"></div>
+						</div>
+						<!--提示   合法    已存在-->
+						<span class="popb"></span>
+					</div>
+					<!--验证码-->
+					<div class="u-input">     <!--style="height: 44px;overflow:inherit;"-->
+						<div class="ncpt-contents" style="display: block;">
+							<label for="inpt-code" class="u-label">验证码：</label>
+							<input type="text" placeholder="请输入验证码" class="ncpt-hint-txt i-inpt" id="inpt-code"></input>
+							<!--验证提示-->
+							<span class="popb"></span>
+							<!--随机验证码图形-->
+							<div class="ncpt_pad">
+								<span class="ncpt-win-iframe" style="width: 320px;height: 50px;z-index: 90;" ></span>
+							</div>
+						</div>
+					</div>
+					<!--手机号-->
+					<div class="u-input j-phone-box">
+						<label for="inpt-phone" class="u-label">手机号：</label>
+						<input type="text" name="phone" id="inpt-phone" placeholder="11位手机号" maxlength="20" class="i-inpt"/>
+						<span class="popb"></span>
+						<div class="u-tip f-dn"></div>
+					</div>
+					<!--切换到国际手机-->
+					<div class="u-input u-note">
+						<label class="u-label"></label>
+						<span class="changephone">切换到国际手机</span>
+					</div>
+					<!--忘记密码，可通过手机快速找回-->
+					<div class="u-input u-note">
+						<label class="u-label"></label>
+						<span style="color: #333;font-size: 12px;">忘记密码，可通过手机快速找回</span>
+					</div>
+					<!--点击注册-->
+					<div class="u-input" style="height: 58px;">
+						<label class="u-label">&nbsp;</label>
+						<div class="b-btn btn-red btndisabled" id="register">注&nbsp;&nbsp;册</div>
+					</div>
+				</form>
+			</div>
+			<div>
+				<a href="https://id.163.com/gj/?from=webzj_zc" style="display: block;position: initial;margin: 0 auto;width: 900px;height: 180px;overflow: hidden;border-radius: 2px;">
+					<img src="../images/reg_bottom.png" alt="#" />
+				</a>
+			</div>
+		</div>
+		<div class="g-ft">
+			<div class="g-in">
+				<div class="m-cp">
+					<p>
+						<a href="javascript:;">About NetEase</a>
+						-
+						<a href="javascript:;">公司简介</a>
+						-
+						<a href="javascript:;">联系方式</a>
+						-
+						<a href="javascript:;">OAuth2.0认证</a>
+						-
+						<a href="javascript:;">招聘信息</a>
+						-
+						<a href="javascript:;">客户服务</a>
+						-
+						<a href="javascript:;">相关法律</a>
+						-
+						<a href="javascript:;">网络营销</a>
+					</p>
+					<p>网易公司版权所有 @copy1997-2017</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
+<script src="../jquery-3.1.1.min.js"></script>
+<script src="../js/register.js"></script>
+<script type="text/javascript" src="../js/cookie.js"></script>
